src/test/ui/macros/assert-trailing-junk.stderr
error: expected one of `,`, `.`, `?`, or an operator, found `some`
  --> $DIR/assert-trailing-junk.rs:6:18
   |
LL |     assert!(true some extra junk, "whatever");
   |                  ^^^^ expected one of `,`, `.`, `?`, or an operator here

error: expected one of `,`, `.`, `?`, or an operator, found `some`
  --> $DIR/assert-trailing-junk.rs:9:18
   |
LL |     assert!(true some extra junk);
   |                  ^^^^ expected one of `,`, `.`, `?`, or an operator here

error: no rules expected the token `blah`
  --> $DIR/assert-trailing-junk.rs:12:30
   |
LL |     assert!(true, "whatever" blah);
   |                             -^^^^ no rules expected this token in macro call
   |                             |
   |                             help: missing comma here

error: aborting due to 3 previous errors

